[tool.poetry]
name = "ppmydata"
version = "0.1.0"
description = ""
authors = ["tarrows <tarrows@fa.ke>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
